--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -33,7 +33,7 @@ arch:
     nr_layers: 4
     layer_size: 128
   deeponet:
-    output_keys: u
+    output_keys: friction_coefficient
 
 scheduler:
   decay_rate: 0.9
