tried getting FNO to work

--- a/outputs/DeepONet_Modulus/.hydra/hydra.yaml
+++ b/outputs/DeepONet_Modulus/.hydra/hydra.yaml
@@ -98,7 +98,7 @@ hydra:
     override_dirname: ''
     id: ???
     num: ???
-    config_name: config
+    config_name: config_deep
     env_set: {}
     env_copy: []
     config:
