--- a/conf/config_fno.yaml
+++ b/conf/config_fno.yaml
@@ -16,35 +16,34 @@
 
 defaults :
   - physicsnemo_default
-  - /arch/fully_connected_cfg@arch.branch
-  - /arch/fourier_cfg@arch.trunk
-  - /arch/deeponet_cfg@arch.deeponet
+  - /arch/conv_fully_connected_cfg@arch.decoder
+  - /arch/fno_cfg@arch.fno
   - scheduler: tf_exponential_lr
   - optimizer: adam
   - loss: sum
   - _self_
 
 arch:
-  branch:
-    nr_layers: 4
-    layer_size: 128
-  trunk:
-    frequencies: "('axis', [i for i in range(5)])"
-    nr_layers: 4
-    layer_size: 128
-  deeponet:
+  decoder:
     output_keys: friction_coefficient
+    nr_layers: 1
+    layer_size: 32
+
+  fno:
+    input_keys: velocity
+    dimension: 1
+    nr_fno_layers: 4
+    fno_modes: 12
+    padding: 9
 
 scheduler:
-  decay_rate: 0.9
-  decay_steps: 100
+  decay_rate: 0.95
+  decay_steps: 1000
 
 training:
-  rec_validation_freq: 1000
+  rec_results_freq : 1000
   max_steps : 10000
 
 batch_size:
-  train: 10000
-  validation: 100
-
-save_filetypes : "np"
+  grid: 32
+  validation: 32
