--- a/conf/config_fno.yaml
+++ b/conf/config_fno.yaml
@@ -26,12 +26,12 @@ defaults :
 arch:
   decoder:
     input_keys: [z, 32]
-    output_keys: [friction_coefficient, 250]
+    output_keys: friction_coefficient
     nr_layers: 1
     layer_size: 32
 
   fno:
-    input_keys: [velocity, 250]
+    input_keys: velocity
     dimension: 1
     nr_fno_layers: 4
     fno_modes: 12
@@ -44,7 +44,7 @@ scheduler:
 training:
   rec_results_freq : 10000
   max_steps : 100000
-
+  
 batch_size:
   grid: 32
   validation: 32
